--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
     "typeorm-naming-strategies": "^4.1.0",
+    "typeorm-transactional": "^0.5.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
